--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
     </main>
 
-    <section>
+    <section class="information">
         <form class="form-subscribe">
             <fieldset>
                 <legend>Subscribe for Updates</legend>
@@ -92,7 +92,7 @@
         </form>
     </section>
 
-    <section>
+    <section class="contact">
         <h2>Management & Booking</h2>
         <p>Email: info_team_ip@mysite.com</p>
         <p>Phone: 999-548-4206</p>
