--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
+
+    <!--fuentes-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Krub:ital@0;1&family=Quicksand:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -45,19 +50,20 @@
                 <path d="M9 7c-3 0 -4 3 -4 5.5c0 3 2 7.5 4 7.5c1.088 -.046 1.679 -.5 3 -.5c1.312 0 1.5 .5 3 .5s4 -3 4 -5c-.028 -.01 -2.472 -.403 -2.5 -3c-.019 -2.17 2.416 -2.954 2.5 -3c-1.023 -1.492 -2.951 -1.963 -3.5 -2c-1.433 -.111 -2.83 1 -3.5 1c-.68 0 -1.9 -1 -3 -1z" />
                 <path d="M12 4a2 2 0 0 0 2 -2a2 2 0 0 0 -2 2" />
               </svg>
-            </div>
+                </div>
         </div>
     </header>
 
     <section class="hero">
         <div class="container-hero">
+            <h1>Paul McCartney Live</h1>
             <div class="Ubication">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M3 7l6 -3l6 3l6 -3v13l-6 3l-6 -3l-6 3v-13" />
                     <path d="M9 4v13" />
                     <path d="M15 7v13" />
-                </svg>
+                  </svg>
                 <h3>México, DF | Foro Sol</h3>
             </div>
             <a class ="boton-boletos" href="https://www.ticketmaster.com.mx/paul-mccartney-boletos/artist/735610">Get your tickets</a>
