--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
         <form class="form-subscribe">
             <fieldset>
                 <legend>Subscribe for Updates</legend>
-                <div>
+                <div class="entrada">
                     <label for="">Email</label>
                     <input type="email" placeholder="Enter your email">
                 </div>
 
-                <div class="boton">
+                <div>
                     <input class= "boton_enviar" type="submit" value="Subscribe now">
                 </div>
 
