--- a/index.html
+++ b/index.html
@@ -23,52 +23,42 @@ font-family: 'Quicksand', sans-serif;-->
         <div class="nav_bg">
             <nav class="nav_principal iconos">
                 <!----Spotify Icon-->
-                <div class="redes">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-spotify" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#1DB954" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
-                    <path d="M8 11.973c2.5 -1.473 5.5 -.973 7.5 .527" />
-                    <path d="M9 15c1.5 -1 4 -1 5 .5" />
-                    <path d="M7 9c2 -1 6 -2 10 .5" />
-                </svg>
-                </div>
+                <a href="https://open.spotify.com/intl-es/artist/4STHEaNw4mPZ2tzheohgXB" target="_blank" class="redes">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-spotify" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#1DB954" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                        <path d="M8 11.973c2.5 -1.473 5.5 -.973 7.5 .527" />
+                        <path d="M9 15c1.5 -1 4 -1 5 .5" />
+                        <path d="M7 9c2 -1 6 -2 10 .5" />
+                    </svg>
+                </a>
 
                 <!----Youtube Icon-->
-                <div class="redes">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-youtube" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FF0000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M2 8a4 4 0 0 1 4 -4h12a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-12a4 4 0 0 1 -4 -4v-8z" />
-                    <path d="M10 9l5 3l-5 3z" />
-                </svg>
-                </div>
+                <a href="https://www.youtube.com/channel/UCvGnJy9RnXX0kGSnDPKCZzQ" target="_blank" class="redes">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-youtube" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FF0000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M2 8a4 4 0 0 1 4 -4h12a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-12a4 4 0 0 1 -4 -4v-8z" />
+                        <path d="M10 9l5 3l-5 3z" />
+                    </svg>
+                 </a>
 
-                <!----AppleMusic Icon-->
-                                
-                <div class="redes">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-apple" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M9 7c-3 0 -4 3 -4 5.5c0 3 2 7.5 4 7.5c1.088 -.046 1.679 -.5 3 -.5c1.312 0 1.5 .5 3 .5s4 -3 4 -5c-.028 -.01 -2.472 -.403 -2.5 -3c-.019 -2.17 2.416 -2.954 2.5 -3c-1.023 -1.492 -2.951 -1.963 -3.5 -2c-1.433 -.111 -2.83 1 -3.5 1c-.68 0 -1.9 -1 -3 -1z" />
-                    <path d="M12 4a2 2 0 0 0 2 -2a2 2 0 0 0 -2 2" />  
-                </svg>
-                </div>
+                <!----AppleMusic Icon-->           
+                <a href="https://music.apple.com/mx/artist/paul-mccartney/12224" target="_blank" class="redes">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-apple" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M9 7c-3 0 -4 3 -4 5.5c0 3 2 7.5 4 7.5c1.088 -.046 1.679 -.5 3 -.5c1.312 0 1.5 .5 3 .5s4 -3 4 -5c-.028 -.01 -2.472 -.403 -2.5 -3c-.019 -2.17 2.416 -2.954 2.5 -3c-1.023 -1.492 -2.951 -1.963 -3.5 -2c-1.433 -.111 -2.83 1 -3.5 1c-.68 0 -1.9 -1 -3 -1z" />
+                        <path d="M12 4a2 2 0 0 0 2 -2a2 2 0 0 0 -2 2" />  
+                    </svg>
+                </a>
             </nav>
         </div>
             
     </header>
 
     <section class="hero">
-        <div class="container-hero">
-            <div class="Ubication">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M3 7l6 -3l6 3l6 -3v13l-6 3l-6 -3l-6 3v-13" />
-                    <path d="M9 4v13" />
-                    <path d="M15 7v13" />
-                  </svg>
-                <h3>México, DF | Foro Sol</h3>
-            </div>
-            <a class ="boton-boletos" href="https://www.ticketmaster.com.mx/paul-mccartney-boletos/artist/735610">Get your tickets</a>
-        </div>
+        <a href="https://maps.app.goo.gl/vMfmp7ETMwRQmMhZ8" class="container-hero">
+            <h3>México, DF | Foro Sol</h3>
+        </a>
     </section>
 
     <main class="contain-shadow">
