--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 
     <!--fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Krub:ital@0;1&family=Quicksand:wght@500&display=swap" rel="stylesheet">
-<!--font-family: 'Krub', sans-serif;
-font-family: 'Quicksand', sans-serif;-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Krub:ital@0;1&family=Quicksand:wght@500&display=swap" rel="stylesheet">
+    <!--font-family: 'Krub', sans-serif;
+    font-family: 'Quicksand', sans-serif;-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
+    <!--font-family: 'Roboto Slab', serif;
+font-family: 'Titillium Web', sans-serif;-->
+
 </head>
 
 <body>
@@ -56,24 +62,26 @@ font-family: 'Quicksand', sans-serif;-->
     </header>
 
     <section class="hero">
-        <a href="https://maps.app.goo.gl/vMfmp7ETMwRQmMhZ8" class="container-hero">
-            <h3>México, DF | Foro Sol</h3>
-        </a>
+        <div class="container-hero">
+            <a href="https://maps.app.goo.gl/vMfmp7ETMwRQmMhZ8" target="_blank">México, DF | Foro Sol</a>
+        </div>
     </section>
 
     <main class="contain-shadow">
-        <h2 class="schedule">Concert dates</h2>
-        <div class="date">
-            <h3>November 14th</h3>
-            <p>Tuesday | 21:00</p>
-            <p>México D.F | Foro Sol</p>
-            <a class ="find-tickets" href="https://www.ticketmaster.com.mx/ticket2ride-paul-mccartney-mexico-14-11-2023/event/14005F19ABD03912">Search tickets</a>
-        </div>
-        <div class="date">
-            <h3>November 16th</h3>
-            <p>Thursday | 21:00</p>
-            <p>México D.F | Foro Sol</p>
-            <a class ="find-tickets" href="https://www.ticketmaster.com.mx/ticket2ride-paul-mccartney-mexico-16-11-2023/event/14005F46808D0998">Search tickets</a>
+        <h2>Concert dates</h2>
+        <div class="dates">
+            <div class="date">
+                <h3>November 14th</h3>
+                <p>Tuesday | 21:00</p>
+                <p>México D.F | Foro Sol</p>
+                <a class ="find-tickets" href="https://www.ticketmaster.com.mx/ticket2ride-paul-mccartney-mexico-14-11-2023/event/14005F19ABD03912">Search tickets</a>
+            </div>
+            <div class="date">
+                <h3>November 16th</h3>
+                <p>Thursday | 21:00</p>
+                <p>México D.F | Foro Sol</p>
+                <a class ="find-tickets" href="https://www.ticketmaster.com.mx/ticket2ride-paul-mccartney-mexico-16-11-2023/event/14005F46808D0998">Search tickets</a>
+            </div>
         </div>
     </main>
 
