--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Krub:ital@0;1&family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <!--font-family: 'Krub', sans-serif;
     font-family: 'Quicksand', sans-serif;-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
-    <!--font-family: 'Roboto Slab', serif;
-font-family: 'Titillium Web', sans-serif;-->
-
 </head>
 
 <body>
@@ -68,16 +62,16 @@ font-family: 'Titillium Web', sans-serif;-->
     </section>
 
     <main class="contain-shadow">
-        <h2>Concert dates</h2>
+        <h3>Concert dates</h3>
         <div class="dates">
             <div class="date">
-                <h3>November 14th</h3>
+                <h2>November 14th</h2>
                 <p>Tuesday | 21:00</p>
                 <p>México D.F | Foro Sol</p>
                 <a class ="find-tickets" href="https://www.ticketmaster.com.mx/ticket2ride-paul-mccartney-mexico-14-11-2023/event/14005F19ABD03912">Search tickets</a>
             </div>
             <div class="date">
-                <h3>November 16th</h3>
+                <h2>November 16th</h2>
                 <p>Thursday | 21:00</p>
                 <p>México D.F | Foro Sol</p>
                 <a class ="find-tickets" href="https://www.ticketmaster.com.mx/ticket2ride-paul-mccartney-mexico-16-11-2023/event/14005F46808D0998">Search tickets</a>
@@ -90,7 +84,7 @@ font-family: 'Titillium Web', sans-serif;-->
             <fieldset>
                 <legend>Subscribe for Updates</legend>
                 <div class="entrada">
-                    <label for="">Email</label>
+                    <label>Email</label>
                     <input type="email" placeholder="Enter your email">
                 </div>
 
