about us update and shadows implemented

--- a/index.html
+++ b/index.html
@@ -65,6 +65,35 @@
             <a href="https://maps.app.goo.gl/vMfmp7ETMwRQmMhZ8" target="_blank">México, DF | Foro Sol</a>
         </div>
     </section>
+    <div class="contenidos sombra">
+    <section class="contenido">
+      <h3>About us</h3>
+      <div class="QS">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-ticket" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M15 5l0 2" />
+          <path d="M15 11l0 2" />
+          <path d="M15 17l0 2" />
+          <path d="M5 5h14a2 2 0 0 1 2 2v3a2 2 0 0 0 0 4v3a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-3a2 2 0 0 0 0 -4v-3a2 2 0 0 1 2 -2" />
+        </svg>
+    </div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam consequatur fugiat repudiandae nobis illum unde cumque enim magnam maxime quae aperiam, iusto animi cupiditate impedit, perferendis totam culpa harum sed!</p>
+    </section>
+
+    <section class="contenido">
+      <h3>Paul McCartney live</h3>
+      <div class="QS">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-hand-rock" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M11 11.5v-1a1.5 1.5 0 0 1 3 0v1.5" />
+          <path d="M17 12v-6.5a1.5 1.5 0 0 1 3 0v10.5a6 6 0 0 1 -6 6h-2h.208a6 6 0 0 1 -5.012 -2.7a69.74 69.74 0 0 1 -.196 -.3c-.312 -.479 -1.407 -2.388 -3.286 -5.728a1.5 1.5 0 0 1 .536 -2.022a1.867 1.867 0 0 1 2.28 .28l1.47 1.47" />
+          <path d="M14 10.5a1.5 1.5 0 0 1 3 0v1.5" />
+          <path d="M8 13v-8.5a1.5 1.5 0 0 1 3 0v7.5" />
+        </svg>
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rem quod temporibus numquam quasi expedita tempore molestiae nam? Distinctio ipsam iure in incidunt repellat architecto enim nemo sapiente nobis! Nesciunt.</p>
+    </section>
+  </div>
 
     <main class="contain-shadow">
         <div class="container">
