--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <path d="M5 5h14a2 2 0 0 1 2 2v3a2 2 0 0 0 0 4v3a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-3a2 2 0 0 0 0 -4v-3a2 2 0 0 1 2 -2" />
         </svg>
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam consequatur fugiat repudiandae nobis illum unde cumque enim magnam maxime quae aperiam, iusto animi cupiditate impedit, perferendis totam culpa harum sed!</p>
+    <p>We are a fan page that wants to share the excitement of having Paul McCartney in Mexico again. See you at the concert!</p>
     </section>
 
     <section class="contenido">
@@ -91,7 +91,7 @@
           <path d="M8 13v-8.5a1.5 1.5 0 0 1 3 0v7.5" />
         </svg>
     </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rem quod temporibus numquam quasi expedita tempore molestiae nam? Distinctio ipsam iure in incidunt repellat architecto enim nemo sapiente nobis! Nesciunt.</p>
+    <p>This will be Paul's sixth solo appearance in Mexico, where he will have two dates scheduled at the Foro Sol in the CDMX. Get your tickets now so you don't miss this opportunity.</p>
     </section>
   </div>
 
