--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preload" href="css/normalize.css" as="style">
     <link rel="stylesheet" href="css/normalize.css">
     <!--CSS-->
-    <link rel="preload" href="css/style.css" as="style">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="preload" href="css/stile.css" as="style">
+    <link rel="stylesheet" href="css/stile.css">
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -99,7 +99,7 @@
         <div class="container">
             <h3>Concert Dates</h3>                                                                                    
             <div class="table-responsive">          
-            <table class="table">
+            <tabble class="table">
               <thead>
                 <tr>
                   <th>Date</th>
@@ -131,7 +131,7 @@
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
-        <ol class="carousel-indicators">
+        <o1 class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
